--- a/docs/style.css
+++ b/docs/style.css
@@ -1,15 +1,74 @@
-.instagramlogo{
-    width: 42px;
-    height: 42px;
-    vertical-align: top;
-    margin:11.25px -10px;
-    float: right;
-}
-
-.facebooklogo{
-    width: 45px;
-    height: 47px;
-    vertical-align: top;
-    margin: 11.25px 10px;
-    float: right;
-}
+                                    .instagramlogo {
+                                        width: 42px;
+                                        height: 42px;
+                                        vertical-align: top;
+                                        margin: 11.25px -10px;
+                                        float: right;
+                                    }
+                                    
+                                    .facebooklogo {
+                                        width: 45px;
+                                        height: 47px;
+                                        vertical-align: top;
+                                        margin: 11.25px 10px;
+                                        float: right;
+                                    }
+                                    /*Style text*/
+                                    
+                                    h1 {
+                                        font-family: Raleway, sans-serif;
+                                        font-size: 30px;
+                                        text-align: center;
+                                        font-weight: 800;
+                                        padding-bottom: 16px;
+                                    }
+                                    
+                                    h2,
+                                    h3 {
+                                        font-family: Raleway, sans-serif;
+                                        font-style: normal;
+                                        font-weight: 600;
+                                        font-size: 22px;
+                                        align-items: flex-end;
+                                        letter-spacing: -0.02em;
+                                        text-align: center;
+                                        padding-bottom: 16px;
+                                    }
+                                    /* Style navigation bar*/
+                                    /* Style the links inside the navigation bar */
+                                    
+                                    nav a {
+                                        text-decoration: none;
+                                        font-weight: bold;
+                                        color: #FFFFFF;
+                                        font-size: 23px;
+                                        padding: 20px 70px;
+                                        display: inline-block;
+                                        margin: auto;
+                                        text-align: center;
+                                    }
+                                    
+                                    header {
+                                        overflow: hidden;
+                                        background-color: #AEE0E0;
+                                        margin: auto;
+                                    }
+                                    
+                                    body {
+                                        margin: auto;
+                                        padding: 0px;
+                                        font-family: 'Open Sans', sans-serif;
+                                    }
+                                    
+                                    nav {
+                                        margin: auto;
+                                        text-align: center;
+                                    }
+                                    
+                                    a.active {
+                                        color: #3D7E7E;
+                                    }
+                                    
+                                    a:hover {
+                                        color: #AED1B8;
+                                    }
