--- a/docs/style.css
+++ b/docs/style.css
@@ -15,7 +15,11 @@ h3 {
     font-weight: 600;
     font-size: 22px;
 }
+
+
 /* Style navigation bar*/
+
+
 /* Style the links inside the navigation bar */
 
 nav a {
@@ -53,6 +57,8 @@ a.active {
 a:hover {
     color: #AED1B8;
 }
+
+
 /*Begin Calendar Style*/
 
 .calendar {
@@ -79,6 +85,8 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
+
+
 /*where first number will appear*/
 
 .date div:first-child {
@@ -103,6 +111,8 @@ a:hover {
     background-color: #C4C4C4;
     color: #3D7E7E;
 }
+
+
 /* to add event, use this inside the time tag :)*/
 
 .event {
@@ -121,25 +131,24 @@ a:hover {
 }
 
 .instagramlogo {
-    width: 42px;
-    height: 42px;
-    vertical-align: top;
+    size: auto;
+    vertical-align: center;
     margin: 11.25px -10px;
     float: right;
 }
 
 .facebooklogo {
-    width: 45px;
-    height: 47px;
-    vertical-align: top;
+    size: auto;
+    vertical-align: center;
     margin: 11.25px 10px;
     float: right;
 }
 
 .gwclogo {
-    width: 65px;
-    height: 70px;
+    size: auto;
 }
+
+
 /*Style text*/
 
 h1 {
@@ -157,7 +166,11 @@ h3 {
     font-weight: 600;
     font-size: 22px;
 }
+
+
 /* Style navigation bar*/
+
+
 /* Style the links inside the navigation bar */
 
 nav a {
@@ -195,6 +208,8 @@ a.active {
 a:hover {
     color: #AED1B8;
 }
+
+
 /*Begin Calendar Style*/
 
 .calendar {
@@ -221,6 +236,8 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
+
+
 /*where first number will appear*/
 
 .date button:first-child {
@@ -250,4 +267,5 @@ a:hover {
     background-color: #EBEBEB;
     color: #EBEBEB;
 }
->>>>>>> b0558f5e5d34009433ae6bb36c9cf47f482cd2bf
+
+>>>>>>>b0558f5e5d34009433ae6bb36c9cf47f482cd2bf
